2005-03-07  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added silky to extras.
	epiphany, gcalctool, gnome-utils, gnomemeeting,
	gnome-themes, and zenity have been branched.

2005-03-07  Christian Persch  <chpe@cvs.gnome.org>

	* translation-status.xml: Epiphany Extensions HEAD is
	epiphany-extensions-1.8.pot now.

2005-03-07  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-games has been branched.

2005-03-06  Danilo Šegan  <dsegan@gmx.net>

	* ignored-lang-list: Added "en_US" to the list.

2005-03-01  Danilo Šegan  <dsegan@gmx.net>

	* translation-status.xml: evolution, evolution-data-server,
	evolution-exchange, gal have branched.

2005-02-28  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gtkhtml has been branched.

2005-02-24  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: libbonobo has been branched.

2005-02-22  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added nautilus-open-terminal.

2005-02-20  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added gnumeric-functions.

2005-02-13  Danilo Šegan  <dsegan@gmx.net>

	* ignored-lang-list: Added "no" to the list.

2005-02-12  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fixed gedit pot file name.

2005-02-09  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Renamed setup-tools-backends module
	to system-tools-backends.

2005-02-09  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Renamed openoffice module to ooo-build.

2005-02-08  Funda Wang  <fundawang@linux.net.cn>

	* translation-status.xml: Trival fix for gdesklets-extras.
  	  I'm not sure if it works, but intltool-update says "untitled".

2005-02-07  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Moved new modules according to final
	module list from proposed to desktop, and the rest to extras.

2005-02-07  Funda Wang  <fundawang@linux.net.cn>
