@@ -1503,7 +1503,7 @@
       <component name="gnome-system-tools" dir="gnome-system-tools" group="desktop">
         <podir dir="po"/>
         <potname name="gnome-system-tools.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gnome-2-10"/>
         <regenerate/>
         <download/>
       </component>
@@ -1625,7 +1625,7 @@
       <component name="gnome-volume-manager" dir="gnome-volume-manager" group="desktop">
 	<podir dir="po"/>
 	<potname name="gnome-volume-manager.pot"/>
-	<branch name="HEAD"/>
+	<branch name="gnome-2-10"/>
 	<regenerate/>
 	<download/>
       </component>
@@ -2785,7 +2785,7 @@
       <component name="system-tools-backends" dir="system-tools-backends" group="desktop">
 	<podir dir="po"/>
 	<potname name="setup-tools-backends.pot"/>
-	<branch name="HEAD"/>
+	<branch name="gnome-2-10"/>
 	<regenerate/>
 	<download/>
       </component>
