@@ -1,3 +1,9 @@
+2005-03-09  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: gnome-volume-manager,
+	gnome-system-tools, and system-tools-backends have
+	been branched.
+
 2005-03-07  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: Added silky to extras.
